--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "s": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
